<resources>
    <!--    <string name="app_name">Ciudadano Digital</string>-->
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logo">Sapien</string>
    <string name="app_name">Sapien</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="email">Correo Electrónico</string>
    <string name="test_email">gue21781@uvg.edu.gt</string>
    <string name="password">Contraseña</string>
    <string name="recover_password_text">¿Has olvidado tu contraseña?</string>
    <string name="login_text">Ingresar</string>
    <string name="to_register_text">¿No tienes una cuenta?</string>
    <string name="to_register_link">¡Regístrate!</string>
    <string name="square">1:1</string>
    <string name="title_activity_unlogged">UnloggedActivity</string>
    <string name="register_title">Crear Cuenta</string>
    <string name="to_login_text">¿Ya tienes una cuenta?</string>
    <string name="to_login_link">¡Inicia Sesión!</string>
    <string name="register_text">Registrarse</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="phone">Número de teléfono</string>
    <string name="phonecode">Código</string>
    <string name="logo_description">Sapien - Ciudadano Digital</string>
    <string name="saludo_inicial">¡Hola!\n ¿Qué puedo hacer por ti?</string>
    <string name="chat_placeholder">Escribe algo...</string>
    <string name="send_desc">Enviar mensaje</string>
    <string name="open_chats">Vista de chats</string>
    <string name="previous_chats_label">Chats Anteriores</string>
    <string name="new_chat_label">Nuevo Chat</string>
    <string name="logout_label">Cerrar Sesión</string>
    <string name="restore_password_label">Restablecer Contraseña</string>
    <string name="recovery_advice">Si el correo electrónico está registrado, recibirás un código de recuperación.</string>
    <string name="send_code_label">Enviar código</string>
    <string name="verify_code_title">Verificar Recuperación</string>
    <string name="verify_code_text">Ingresa el código de verificación obtenido.\nSi no recibiste ningún código, regresa a la pantalla anterior e inténtalo de nuevo.</string>
    <string name="verify_code_label">Verificar Código</string>
    <string name="set_password_title">Establecer Contraseña</string>
    <string name="set_password_label">Ingresa tu nueva contraseña para poder acceder nuevamente a la aplicación.</string>
    <string name="save_label">Guardar</string>
    <string name="info_icon">ícono de información</string>
    <string name="username">%1$s %2$s</string>
    <string name="edit_label">Editar</string>
    <string name="manage_documents_label">Documentos</string>
    <string name="documents_label">Documentos</string>
    <string name="add_label">Agregar</string>
    <string name="file_preview_description">Preview Documento</string>
    <string name="document_form_title">Nuevo Documento</string>
    <string name="title_label">Título</string>
    <string name="document_title_placeholder">Título del documento</string>
    <string name="author_document_placeholder">Autor</string>
    <string name="year_document_placeholder">Año de publicación</string>
    <string name="file_name_placeholder">No se ha seleccionado ningún documento</string>
    <string name="add_file_label">Cargar</string>
    <string name="document_ages_label">Edades contempladas</string>
    <string name="age_slider_placeholder">13 - 17 años</string>
    <string name="ages_preview_template">%1$d - %2$d años</string>
</resources>