<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashActivity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:fillViewport="true"
    android:theme="@style/Theme.CiudadanoDigital"
    tools:context=".ui.activity.SplashActivity">

    <ImageView
        android:id="@+id/splashActivity_logo"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/sapien_logo"
        app:layout_constraintBottom_toTopOf="@id/splashActivity_title"
        app:layout_constraintDimensionRatio="@string/square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/splashActivity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/highlight_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashActivity_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>