<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logInFragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:paddingHorizontal="30dp"
    android:theme="@style/Theme.CiudadanoDigital"
    tools:context=".ui.fragment.recovery.ResetPasswordFragment">

    <TextView
        android:id="@+id/resetPasswordFragment_titleRecovery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist"
        android:text="@string/set_password_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/resetPasswordFragment_textRecovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resetPasswordFragment_textRecovery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/urbanist"
        android:text="@string/set_password_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/help_color"
        android:textSize="@dimen/small_text"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordFragment_passwordTextInput"
        app:layout_constraintEnd_toEndOf="@+id/resetPasswordFragment_passwordTextInput"
        app:layout_constraintStart_toStartOf="@+id/resetPasswordFragment_passwordTextInput"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordFragment_titleRecovery" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetPasswordFragment_passwordTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:labelFor="@id/resetPasswordFragment_passwordEditText"
        android:textColorHint="@color/placeholder"
        app:boxBackgroundColor="@color/input_background"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/input_radius"
        app:boxCornerRadiusTopStart="@dimen/input_radius"
        app:boxStrokeColor="@color/placeholder"
        app:boxStrokeWidth="1.5dp"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/placeholder"
        app:hintTextColor="@color/placeholder"
        app:layout_constraintBottom_toTopOf="@id/resetPasswordFragment_confirmPasswordTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordFragment_textRecovery"
        app:placeholderTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resetPasswordFragment_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/placeholder"
            android:textSize="@dimen/normal_text"
            tools:text="contraseña" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetPasswordFragment_confirmPasswordTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:labelFor="@id/resetPasswordFragment_confirmPasswordEditText"
        android:textColorHint="@color/placeholder"
        app:boxBackgroundColor="@color/input_background"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/input_radius"
        app:boxCornerRadiusTopStart="@dimen/input_radius"
        app:boxStrokeColor="@color/placeholder"
        app:boxStrokeWidth="1.5dp"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/placeholder"
        app:hintTextColor="@color/placeholder"
        app:layout_constraintBottom_toTopOf="@id/resetPasswordFragment_setPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordFragment_passwordTextInput"
        app:placeholderTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resetPasswordFragment_confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/placeholder"
            android:textSize="@dimen/normal_text"
            tools:text="contraseña" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPasswordFragment_setPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/input_background"
        android:elevation="20dp"
        android:fontFamily="@font/urbanist"
        android:letterSpacing="0"
        android:paddingVertical="18dp"
        android:text="@string/save_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordFragment_confirmPasswordTextInput" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/resetPasswordFragment_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/help_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="@string/square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordFragment_confirmPasswordTextInput" />

</androidx.constraintlayout.widget.ConstraintLayout>